@@ -21,8 +21,11 @@
               {% if company.vat_id %} - {{ company.vat_id }}{% endif %}
             </div>
           </div>
-
         </div>
+        <div class="text-right">
+            <a href="{{ company.delete_url }}" class="btn btn-sm btn-danger"><i
+      class="icon bi-trash"></i> {% trans "Delete" %}</a>
+          </div>
       </div>
     </div>
   </header>
