@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .badge {
   display: inline-block;
   padding: 0.25em 0.4em;
@@ -8,15 +9,11 @@
   white-space: nowrap;
   vertical-align: baseline;
   border-radius: 0.35rem;
-  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
 }
 
 @media (prefers-reduced-motion: reduce) {
   .badge {
-    -webkit-transition: none;
     transition: none;
   }
 }
@@ -51,8 +48,7 @@ a.badge-primary:hover, a.badge-primary:focus {
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.5);
 }
 
 .badge-secondary {
@@ -67,8 +63,7 @@ a.badge-secondary:hover, a.badge-secondary:focus {
 
 a.badge-secondary:focus, a.badge-secondary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(105, 0, 199, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(105, 0, 199, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(105, 0, 199, 0.5);
 }
 
 .badge-success {
@@ -83,8 +78,7 @@ a.badge-success:hover, a.badge-success:focus {
 
 a.badge-success:focus, a.badge-success.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 172, 105, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 172, 105, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 172, 105, 0.5);
 }
 
 .badge-info {
@@ -99,8 +93,7 @@ a.badge-info:hover, a.badge-info:focus {
 
 a.badge-info:focus, a.badge-info.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 207, 213, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 207, 213, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 207, 213, 0.5);
 }
 
 .badge-warning {
@@ -115,8 +108,7 @@ a.badge-warning:hover, a.badge-warning:focus {
 
 a.badge-warning:focus, a.badge-warning.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 161, 0, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(244, 161, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(244, 161, 0, 0.5);
 }
 
 .badge-danger {
@@ -131,8 +123,7 @@ a.badge-danger:hover, a.badge-danger:focus {
 
 a.badge-danger:focus, a.badge-danger.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(232, 21, 0, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(232, 21, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(232, 21, 0, 0.5);
 }
 
 .badge-light {
@@ -147,8 +138,7 @@ a.badge-light:hover, a.badge-light:focus {
 
 a.badge-light:focus, a.badge-light.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(242, 246, 252, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(242, 246, 252, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(242, 246, 252, 0.5);
 }
 
 .badge-dark {
@@ -163,8 +153,7 @@ a.badge-dark:hover, a.badge-dark:focus {
 
 a.badge-dark:focus, a.badge-dark.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(33, 40, 50, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(33, 40, 50, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(33, 40, 50, 0.5);
 }
 
 .badge-black {
@@ -179,8 +168,7 @@ a.badge-black:hover, a.badge-black:focus {
 
 a.badge-black:focus, a.badge-black.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5);
 }
 
 .badge-white {
@@ -195,8 +183,7 @@ a.badge-white:hover, a.badge-white:focus {
 
 a.badge-white:focus, a.badge-white.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
 }
 
 .badge-red {
@@ -211,8 +198,7 @@ a.badge-red:hover, a.badge-red:focus {
 
 a.badge-red:focus, a.badge-red.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(232, 21, 0, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(232, 21, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(232, 21, 0, 0.5);
 }
 
 .badge-orange {
@@ -227,8 +213,7 @@ a.badge-orange:hover, a.badge-orange:focus {
 
 a.badge-orange:focus, a.badge-orange.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(247, 100, 0, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(247, 100, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(247, 100, 0, 0.5);
 }
 
 .badge-yellow {
@@ -243,8 +228,7 @@ a.badge-yellow:hover, a.badge-yellow:focus {
 
 a.badge-yellow:focus, a.badge-yellow.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(244, 161, 0, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(244, 161, 0, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(244, 161, 0, 0.5);
 }
 
 .badge-green {
@@ -259,8 +243,7 @@ a.badge-green:hover, a.badge-green:focus {
 
 a.badge-green:focus, a.badge-green.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 172, 105, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 172, 105, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 172, 105, 0.5);
 }
 
 .badge-teal {
@@ -275,8 +258,7 @@ a.badge-teal:hover, a.badge-teal:focus {
 
 a.badge-teal:focus, a.badge-teal.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 186, 148, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 186, 148, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 186, 148, 0.5);
 }
 
 .badge-cyan {
@@ -291,8 +273,7 @@ a.badge-cyan:hover, a.badge-cyan:focus {
 
 a.badge-cyan:focus, a.badge-cyan.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 207, 213, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 207, 213, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 207, 213, 0.5);
 }
 
 .badge-blue {
@@ -307,8 +288,7 @@ a.badge-blue:hover, a.badge-blue:focus {
 
 a.badge-blue:focus, a.badge-blue.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.5);
 }
 
 .badge-indigo {
@@ -323,8 +303,7 @@ a.badge-indigo:hover, a.badge-indigo:focus {
 
 a.badge-indigo:focus, a.badge-indigo.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(88, 0, 232, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(88, 0, 232, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(88, 0, 232, 0.5);
 }
 
 .badge-purple {
@@ -339,8 +318,7 @@ a.badge-purple:hover, a.badge-purple:focus {
 
 a.badge-purple:focus, a.badge-purple.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(105, 0, 199, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(105, 0, 199, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(105, 0, 199, 0.5);
 }
 
 .badge-pink {
@@ -355,8 +333,7 @@ a.badge-pink:hover, a.badge-pink:focus {
 
 a.badge-pink:focus, a.badge-pink.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(227, 0, 89, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(227, 0, 89, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(227, 0, 89, 0.5);
 }
 
 .badge-red-soft {
@@ -371,8 +348,7 @@ a.badge-red-soft:hover, a.badge-red-soft:focus {
 
 a.badge-red-soft:focus, a.badge-red-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(241, 224, 227, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(241, 224, 227, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(241, 224, 227, 0.5);
 }
 
 .badge-orange-soft {
@@ -387,8 +363,7 @@ a.badge-orange-soft:hover, a.badge-orange-soft:focus {
 
 a.badge-orange-soft:focus, a.badge-orange-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(243, 231, 227, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(243, 231, 227, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(243, 231, 227, 0.5);
 }
 
 .badge-yellow-soft {
@@ -403,8 +378,7 @@ a.badge-yellow-soft:hover, a.badge-yellow-soft:focus {
 
 a.badge-yellow-soft:focus, a.badge-yellow-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(242, 238, 227, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(242, 238, 227, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(242, 238, 227, 0.5);
 }
 
 .badge-green-soft {
@@ -419,8 +393,7 @@ a.badge-green-soft:hover, a.badge-green-soft:focus {
 
 a.badge-green-soft:focus, a.badge-green-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(218, 239, 237, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(218, 239, 237, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(218, 239, 237, 0.5);
 }
 
 .badge-teal-soft {
@@ -435,8 +408,7 @@ a.badge-teal-soft:hover, a.badge-teal-soft:focus {
 
 a.badge-teal-soft:focus, a.badge-teal-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(218, 240, 242, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(218, 240, 242, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(218, 240, 242, 0.5);
 }
 
 .badge-cyan-soft {
@@ -451,8 +423,7 @@ a.badge-cyan-soft:hover, a.badge-cyan-soft:focus {
 
 a.badge-cyan-soft:focus, a.badge-cyan-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(218, 242, 248, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(218, 242, 248, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(218, 242, 248, 0.5);
 }
 
 .badge-blue-soft {
@@ -467,8 +438,7 @@ a.badge-blue-soft:hover, a.badge-blue-soft:focus {
 
 a.badge-blue-soft:focus, a.badge-blue-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(218, 231, 251, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(218, 231, 251, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(218, 231, 251, 0.5);
 }
 
 .badge-indigo-soft {
@@ -483,8 +453,7 @@ a.badge-indigo-soft:hover, a.badge-indigo-soft:focus {
 
 a.badge-indigo-soft:focus, a.badge-indigo-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(227, 221, 250, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(227, 221, 250, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(227, 221, 250, 0.5);
 }
 
 .badge-purple-soft {
@@ -499,8 +468,7 @@ a.badge-purple-soft:hover, a.badge-purple-soft:focus {
 
 a.badge-purple-soft:focus, a.badge-purple-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(228, 221, 247, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(228, 221, 247, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(228, 221, 247, 0.5);
 }
 
 .badge-pink-soft {
@@ -515,8 +483,7 @@ a.badge-pink-soft:hover, a.badge-pink-soft:focus {
 
 a.badge-pink-soft:focus, a.badge-pink-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(241, 221, 236, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(241, 221, 236, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(241, 221, 236, 0.5);
 }
 
 .badge-primary-soft {
@@ -531,8 +498,7 @@ a.badge-primary-soft:hover, a.badge-primary-soft:focus {
 
 a.badge-primary-soft:focus, a.badge-primary-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(218, 231, 251, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(218, 231, 251, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(218, 231, 251, 0.5);
 }
 
 .badge-secondary-soft {
@@ -547,8 +513,7 @@ a.badge-secondary-soft:hover, a.badge-secondary-soft:focus {
 
 a.badge-secondary-soft:focus, a.badge-secondary-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(228, 221, 247, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(228, 221, 247, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(228, 221, 247, 0.5);
 }
 
 .badge-success-soft {
@@ -563,8 +528,7 @@ a.badge-success-soft:hover, a.badge-success-soft:focus {
 
 a.badge-success-soft:focus, a.badge-success-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(218, 239, 237, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(218, 239, 237, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(218, 239, 237, 0.5);
 }
 
 .badge-info-soft {
@@ -579,8 +543,7 @@ a.badge-info-soft:hover, a.badge-info-soft:focus {
 
 a.badge-info-soft:focus, a.badge-info-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(218, 242, 248, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(218, 242, 248, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(218, 242, 248, 0.5);
 }
 
 .badge-warning-soft {
@@ -595,8 +558,7 @@ a.badge-warning-soft:hover, a.badge-warning-soft:focus {
 
 a.badge-warning-soft:focus, a.badge-warning-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(242, 238, 227, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(242, 238, 227, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(242, 238, 227, 0.5);
 }
 
 .badge-danger-soft {
@@ -611,15 +573,13 @@ a.badge-danger-soft:hover, a.badge-danger-soft:focus {
 
 a.badge-danger-soft:focus, a.badge-danger-soft.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(241, 224, 227, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(241, 224, 227, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(241, 224, 227, 0.5);
 }
 
 .btn-google-sign {
   color: #545454;
   background-color: #ffffff;
-  -webkit-box-shadow: 0 1px 2px 1px #ddd;
-          box-shadow: 0 1px 2px 1px #ddd;
+  box-shadow: 0 1px 2px 1px #ddd;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
 }
@@ -628,7 +588,6 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
 }
 
 .datatable {
-  font-size: 13.6px;
   font-size: 0.85rem;
 }
 .datatable thead th {
@@ -658,68 +617,43 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
 .datatable .btn-datatable {
   height: 20px !important;
   width: 20px !important;
-  font-size: 12px;
   font-size: 0.75rem;
   border-radius: 0.35rem !important;
 }
 
 .page-header .page-header-content {
-  padding-top: 48px;
   padding-top: 3rem;
-  padding-bottom: 96px !important;
-  padding-bottom: 6rem !important;
+  padding-bottom: 1rem !important;
 }
-
 .page-header .page-header-content .page-header-title {
   line-height: normal;
-  font-size: 36px;
   font-size: 2.25rem;
   font-weight: 500;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-bottom: 0;
 }
-
 .page-header .page-header-content .page-header-title .page-header-icon {
-  margin-right: 8px;
   margin-right: 0.5rem;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
 }
-
 .page-header .page-header-content .page-header-title .page-header-icon .feather {
-  height: 28px;
   height: 1.75rem;
-  width: 28px;
   width: 1.75rem;
 }
-
-.page-header .page-header-content .page-header-subtitle {
-  font-size: 18.4px;
+.page-header .page-header-subtitle {
   font-size: 1.15rem;
-  margin-top: 4px;
   margin-top: 0.25rem;
 }
-
 .page-header .page-header-search .input-group-joined {
   border-color: transparent;
 }
-
 .page-header .page-header-search .input-group-joined .form-control {
-  height: 64px;
   height: 4rem;
-  font-size: 20px;
   font-size: 1.25rem;
 }
-
 .page-header .page-header-search .input-group-joined:focus-within {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(0, 97, 242, 0.25);
   border-color: transparent;
 }
 
@@ -728,14 +662,11 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
 }
 
 .page-header-compact .page-header-content .page-header-title {
-  font-size: 16px;
   font-size: 1rem;
 }
 
 .page-header-compact .page-header-content .page-header-title .page-header-icon .feather {
-  height: 16px;
   height: 1rem;
-  width: 16px;
   width: 1rem;
 }
 
@@ -757,8 +688,7 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
 
 .page-header.page-header-dark .breadcrumb {
   background-color: rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0 0.15rem 1.75rem 0 rgba(33, 40, 50, 0.15);
-          box-shadow: 0 0.15rem 1.75rem 0 rgba(33, 40, 50, 0.15);
+  box-shadow: 0 0.15rem 1.75rem 0 rgba(33, 40, 50, 0.15);
 }
 
 .page-header.page-header-dark .breadcrumb .breadcrumb-item,
@@ -771,8 +701,7 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
 }
 
 .page-header.page-header-dark .page-header-search .input-group-joined:focus-within {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
   border-color: transparent;
 }
 
@@ -806,7 +735,6 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
 }
 
 .headed-content {
-  margin-top: -96px !important;
   margin-top: -6rem !important;
 }
 
@@ -819,37 +747,21 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
   width: 100%;
 }
 .nav-wizard .nav-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 32px;
+  align-items: center;
   padding: 2rem;
 }
 .nav-wizard .nav-link .wizard-step-icon {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 40px;
+  align-items: center;
+  justify-content: center;
   height: 2.5rem;
-  width: 40px;
   width: 2.5rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  margin-right: 16px;
+  flex-shrink: 0;
   margin-right: 1rem;
   border-radius: 0.35rem;
   background-color: #0061f2;
   color: white;
-  font-size: 16px;
   font-size: 1rem;
 }
 .nav-wizard .nav-link .wizard-step-icon i, .nav-wizard .nav-link .wizard-step-icon svg, .nav-wizard .nav-link .wizard-step-icon .feather {
@@ -860,15 +772,12 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
   text-align: left;
 }
 .nav-wizard .nav-link .wizard-step-text .wizard-step-text-name {
-  font-size: 16px;
   font-size: 1rem;
-  margin-bottom: 4px;
   margin-bottom: 0.25rem;
   color: #0061f2;
 }
 .nav-wizard .nav-link .wizard-step-text .wizard-step-text-details {
   font-weight: 400;
-  font-size: 14px;
   font-size: 0.875rem;
   color: #69707a;
 }
@@ -906,9 +815,7 @@ a.badge-danger-soft:focus, a.badge-danger-soft.focus {
 }
 
 fieldset {
-  padding: 16px 24px;
   padding: 1rem 1.5rem;
-  margin-bottom: 0px;
   margin-bottom: 0rem;
 }
 fieldset.border-left-info legend {
@@ -924,11 +831,9 @@ fieldset.border-left-warning legend {
   color: var(--yellow);
 }
 fieldset legend {
-  padding-top: 64px;
   padding-top: 4rem;
 }
 fieldset h4 {
-  margin-bottom: 24px;
   margin-bottom: 1.5rem;
 }
 
@@ -951,18 +856,10 @@ fieldset h4 {
 
 .card-header-actions .card-header {
   /*height: 3.5rem;*/
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding-top: 9px;
+  align-items: center;
+  justify-content: space-between;
   padding-top: 0.5625rem;
-  padding-bottom: 9px;
   padding-bottom: 0.5625rem;
 }
 
@@ -971,12 +868,12 @@ fieldset h4 {
 }
 
 .sidebar #sidebarToggle::after {
-  content: "\f22d";
+  content: "";
   font-family: bootstrap-icons !important;
 }
 
 .sidebar.toggled #sidebarToggle::after {
-  content: "\f231";
+  content: "";
   font-family: bootstrap-icons !important;
 }
 
@@ -998,3 +895,5 @@ fieldset h4 {
   text-align: center;
   font-size: 1.5em;
 }
+
+/*# sourceMappingURL=project.css.map */
