@@ -63,6 +63,7 @@ fieldset {
     margin-bottom: 1.5rem;
   }
 }
+
 .buttonHolder {
   margin-top: 32px;
 }
